--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -308,7 +308,7 @@
                     <h4 class="modal-title">温馨提示</h4>
                 </div>
                 <div class="modal-body">
-                    <p>恭喜您，{{"Create Task" | translate}}成功！</p>
+                    <p>{{tips}}</p>
                 </div>
                 <div class="modal-footer text-center">
                     <a ng-href="#/recommands?task_id={{task_id}}" class="btn btn-primary" ng-if="recommands > 0">{{"Our Recommendations" | translate}}</a>
