--- a/src/less/navbar.less
+++ b/src/less/navbar.less
@@ -6,10 +6,19 @@
 .has-navbar-top.off-top .navbar-absolute-top {
     display: none;
 }
+
 .has-navbar-bottom.off-bottom .app-body {
     padding-bottom: 0;
 }
 
 .has-navbar-bottom.off-bottom .navbar-absolute-bottom {
     display: none;
+}
+
+.navbar-brand {
+    background-color: @brand-primary;
+    color: white;
+}
+.navbar-absolute-top .btn {
+	color: white;
 }
