--- a/src/templates/translators.html
+++ b/src/templates/translators.html
@@ -62,12 +62,12 @@
                 </div>
                 <div class="btn-group pull-left">
                     <div class="btn sidebar-toggle" ui-turn-off="search_translators_panel">
-                        <i class="fa fa-chevron-left"></i>
+                        <i class="fa fa-chevron-left text-white"></i>
                     </div>
                 </div>
                 <div class="btn-group pull-right">
                     <a ng-click="search()" class="btn">
-                        <i class="fa fa-search text-large"></i>
+                        <i class="fa fa-search text-large text-white"></i>
                     </a>
                 </div>
             </div>
