--- a/src/less/index.less
+++ b/src/less/index.less
@@ -113,6 +113,15 @@
     background-color: white;
 }
 
+.location-footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 30px;
+    width: 80%;
+    background-color: white;
+}
+
 .location {
     position: absolute;
     right: 0;
@@ -129,6 +138,7 @@
     right: 0;
     width: 80%;
     top: 0px;
+    bottom: 0;
     background-color: white;
 }
 
@@ -137,6 +147,7 @@
     width: 80%;
     right: 1px;
     top: 0px;
+    bottom: 0;
     background-color: white;
 }
 
