--- a/src/templates/location.html
+++ b/src/templates/location.html
@@ -15,3 +15,8 @@
         </div>
     </div>
 </div>
+<div class="location-footer">
+    <div class="btn-group justified">
+        <span class="btn btn-primary rectangle" ng-click="reset_location()">重置</span>
+    </div>
+</div>
