--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -118,9 +118,9 @@
                             </div>
                         </div>
                         <div class="semi-auto semi-icon-bar">
-                            <span class="semi-fixed-left semi-wide-40 text-center">
+                            <!-- <span class="semi-fixed-left semi-wide-40 text-center">
                                 <i class="kk kk-25 kk-checked" ng-class="{'active':input.price !=''}"></i>
-                            </span>
+                            </span> -->
                             <input type="number" class="form-control rectangle youyi-flat-input text-right" name="price" ng-model="input.price" placeholder="请填写" required>
                             <span class="semi-fixed-right semi-wide-40 text-center">
                                 <span class="btn">/{{"Day" | translate}}</span>
