--- a/src/templates/category.html
+++ b/src/templates/category.html
@@ -7,3 +7,8 @@
         </label>
     </div>
 </div>
+<div class="location-footer">
+    <div class="btn-group justified">
+        <span class="btn btn-primary rectangle" ng-click="reset_category()">重置</span>
+    </div>
+</div>
