--- a/src/templates/modify_signin_password.html
+++ b/src/templates/modify_signin_password.html
@@ -12,20 +12,20 @@
             </div>
             <form ng-submit="ajaxForm()" name="modifyForm">
                 <div class="kk-input-group flat">
-                    <input type="text" name="username" class="form-control" placeholder="请输入手机号码/邮箱" ng-model="input.username" required telephone-or-email>
-                    <span class="tip text-warning" ng-show="modifyForm.username.$invalid && modifyForm.username.$dirty">必填,手机或邮箱</span>
+                    <input type="text" name="username" class="form-control" placeholder="{{'Enter Your Mobile No. or Email' | translate}}" ng-model="input.username" required telephone-or-email>
+                    <!-- <span class="tip text-warning" ng-show="modifyForm.username.$invalid && modifyForm.username.$dirty">必填,手机或邮箱</span> -->
                 </div>
                 <div class="kk-input-group flat">
                     <button type="button" class="btn btn-warning btn-sms" ng-click="getVerifycode()" ng-disabled="callbackTimer.counting || modifyForm.username.$invalid">
                         <timer id="kkcountdown" interval="1000" countdown="60" auto-start='false' ng-show="callbackTimer.counting" finish-callback="callbackTimer.finish()">{{countdown + 1}}</timer>
-                        获取验证码
+                        {{"Get Verification Code" | translate}}
                     </button>
                     <input type="text" name="verifycode" class="form-control" placeholder="请输入验证码" ng-model="input.verifycode" required>
-                    <span class="tip text-warning" ng-show="modifyForm.verifycode.$invalid && modifyForm.verifycode.$dirty">必填，验证码为6位</span>
+                    <!-- <span class="tip text-warning" ng-show="modifyForm.verifycode.$invalid && modifyForm.verifycode.$dirty">必填，验证码为6位</span> -->
                 </div>
                 <div class="kk-input-group flat">
                     <input type="password" name="password" class="form-control" placeholder="请输入登录密码" ng-model="input.password" required ng-minlength=8 />
-                    <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码至少8位</span>
+                    <!-- <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码至少8位</span> -->
                 </div>
                 <div class="kk-input-group">
                     <button type="submit" class="btn btn-warning block full-width">修改登录密码</button>
