--- a/src/templates/modify_trade_password.html
+++ b/src/templates/modify_trade_password.html
@@ -1,5 +1,5 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">修改交易密码</div>
+<div ui-content-for="title">{{"Change Transaction Password" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
     <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
@@ -12,23 +12,23 @@
             </div>
             <form ng-submit="ajaxForm()" name="modifyForm">
                 <div class="kk-input-group flat">
-                    <input type="text" name="username" class="form-control" placeholder="请输入手机号码/邮箱" ng-model="input.username" required telephone-or-email>
-                    <span class="tip text-warning" ng-show="modifyForm.username.$invalid && modifyForm.username.$dirty">必填,手机或邮箱</span>
+                    <input type="text" name="username" class="form-control" placeholder="{{'Enter Your Mobile No. or Email' | translate}}" ng-model="input.username" required telephone-or-email>
+                    <!-- <span class="tip text-warning" ng-show="modifyForm.username.$invalid && modifyForm.username.$dirty">必填,手机或邮箱</span> -->
                 </div>
                 <div class="kk-input-group flat">
                     <button type="button" class="btn btn-warning btn-sms" ng-click="getVerifycode()" ng-disabled="callbackTimer.counting || modifyForm.username.$invalid">
                         <timer id="kkcountdown" interval="1000" countdown="60" auto-start='false' ng-show="callbackTimer.counting" finish-callback="callbackTimer.finish()">{{countdown + 1}}</timer>
-                        获取验证码
+                        {{"Get Verification Code" | translate}}
                     </button>
                     <input type="text" name="verifycode" class="form-control" placeholder="请输入验证码" ng-model="input.verifycode" required>
-                    <span class="tip text-warning" ng-show="modifyForm.verifycode.$invalid && modifyForm.verifycode.$dirty">必填，验证码为6位</span>
+                    <!-- <span class="tip text-warning" ng-show="modifyForm.verifycode.$invalid && modifyForm.verifycode.$dirty">必填，验证码为6位</span> -->
                 </div>
                 <div class="kk-input-group flat">
-                    <input type="password" name="password" class="form-control" placeholder="请输入登录密码" ng-model="input.password" required ng-minlength=6 ng-maxlength=6 />
-                    <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码6位</span>
+                    <input type="password" name="password" class="form-control" placeholder="请输入交易密码" ng-model="input.password" required ng-minlength=6 ng-maxlength=6 />
+                    <!-- <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码6位</span> -->
                 </div>
                 <div class="kk-input-group">
-                    <button type="submit" class="btn btn-warning block full-width">修改交易密码</button>
+                    <button type="submit" class="btn btn-warning block full-width">{{"Change Transaction Password" | translate}}</button>
                 </div>
             </form>
         </div>
