--- a/src/templates/price.html
+++ b/src/templates/price.html
@@ -1,13 +1,18 @@
 <div class="filter-cover" ng-click="reset_filter()"></div>
 <div class="price" style="top:{{offset_top}}">
     <div class="btn-group justified">
-        <label class="btn rectangle" ng-class="{'text-primary':price_tab.name=='by_hour','bg-gray-lighter':price_tab.name != 'by_hour'}"><input type="radio" class="hide" ng-model="price_tab.name" name="salary" value="by_hour">按小时计算</label>
-        <label class="btn rectangle" ng-class="{'text-primary':price_tab.name =='by_day','bg-gray-lighter':price_tab.name != 'by_day'}"><input type="radio" class="hide" ng-model="price_tab.name" name="salary" value="by_day">按天计算</label>
+        <label class="btn rectangle" ng-class="{'text-primary':price_tab.name=='by_hour','bg-gray-lighter':price_tab.name != 'by_hour'}"><input type="radio" class="hide" ng-model="price_tab.name" name="salary" value="by_hour">{{"/hr." | translate}}</label>
+        <label class="btn rectangle" ng-class="{'text-primary':price_tab.name =='by_day','bg-gray-lighter':price_tab.name != 'by_day'}"><input type="radio" class="hide" ng-model="price_tab.name" name="salary" value="by_day">{{"/day" | translate}}</label>
     </div>
     <div class="list-group">
         <label class="list-group-item" ng-repeat="price in prices" ng-class="{'list-group-item-warning':price == choosen.price}">
             <input type="radio" class="hidden" ng-model="choosen.price" ng-value="price">
             {{price.unit +  "-" + price.range}}
         </label>
+    </div>
+</div>
+<div class="location-footer">
+    <div class="btn-group justified">
+        <span class="btn btn-primary rectangle" ng-click="reset_price()">重置</span>
     </div>
 </div>
