--- a/src/less/app.less
+++ b/src/less/app.less
@@ -9,3 +9,6 @@
 @import "navbar.less";
 @import "index.less";
 @import "uploader.less";
+@import "bower_components/angular-native-datepicker/build/themes/default.css";
+@import "bower_components/angular-native-datepicker/build/themes/default.date.css";
+@import "bower_components/angular-native-datepicker/build/themes/default.time.css";
