--- a/src/templates/me_info.html
+++ b/src/templates/me_info.html
@@ -18,14 +18,14 @@
             <div class="list-group-item clearfix kk-input-group">
                 <span class="btn col-xs-3 section-wide text-left">{{"Nickname" | translate}}</span>
                 <span class="col-xs-9 section-wide">
-                    <input type="text" name="nickname" class="form-control youyi-flat-input col-xs-8" placeholder="请输入昵称" ng-model="user.nickname" required>
+                    <input type="text" name="nickname" class="form-control youyi-flat-input col-xs-8" placeholder="{{'Nickname' | translate}}" ng-model="user.nickname" required>
                 <!-- <span class="tip text-warning">error</span> -->
                 </span>
             </div>
             <div class="list-group-item clearfix kk-input-group">
                 <span class="btn col-xs-3 section-wide text-left">{{"Real Name" | translate}}</span>
                 <span class="col-xs-9 section-wide">
-                    <input type="text" name="realname" class="form-control youyi-flat-input col-xs-8" placeholder="请输入真实姓名" ng-model="user.name" required>
+                    <input type="text" name="realname" class="form-control youyi-flat-input col-xs-8" placeholder="{{'Real Name' | translate}}" ng-model="user.name" required>
                 <!-- <span class="tip text-warning">error</span> -->
                 </span>
             </div>
@@ -56,7 +56,7 @@
             <div class="list-group-item clearfix kk-input-group">
                 <span class="btn col-xs-3 section-wide text-left">{{"Industry" | translate}}</span>
                 <span class="col-xs-9 section-wide">
-                    <input type="text" name="profession" class="form-control youyi-flat-input col-xs-8" placeholder="请输入行业" ng-model="user.profession" required>
+                    <input type="text" name="profession" class="form-control youyi-flat-input col-xs-8" placeholder="{{'Industry' | translate}}" ng-model="user.profession" required>
                 <!-- <span class="tip text-warning">error</span> -->
                 </span>
             </div>
@@ -93,7 +93,7 @@
                         <i class="fa fa-chevron-left" style="position:relative;top:3px"></i>
                     </div>
                     <span class="pull-right" style="position:relative;top:3px" ng-click="choosen_city()">{{"Save" | translate}}</span>
-                    <h4 class="modal-title text-center">选择地区</h4>
+                    <h4 class="modal-title text-center">{{"Place" | translate}}</h4>
                 </div>
                 <div class="modal-body" style="padding:0">
                     <div class="country">
