--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -278,7 +278,7 @@
                         <i class="fa fa-chevron-left" style="position:relative;top:3px"></i>
                     </div>
                     <span class="pull-right" style="position:relative;top:3px" ui-turn-off="district_panel">{{"Save" | translate}}</span>
-                    <h4 class="modal-title text-center">选择地区</h4>
+                    <h4 class="modal-title text-center">{{"Place" | translate}}</h4>
                 </div>
                 <div class="modal-body" style="padding:0">
                     <div class="country">
