--- a/src/less/index.less
+++ b/src/less/index.less
@@ -195,6 +195,9 @@
     -webkit-border-radius: 5px;
     overflow: hidden;
     color: @gray;
+    .detail-collapse {
+        white-space: normal;
+    }
 }
 
 .youyi-date,
