--- a/src/templates/applicants.html
+++ b/src/templates/applicants.html
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="recommand-avatar">
+                <div class="recommand-avatar" ng-click="preview_translator(applicant.user_id)">
                     <img ng-src="{{staticImageUrl + applicant.avatar || '../images/avatar_1.png'}}" err-src="../images/avatar_1.png" alt="">
                 </div>
             </div>
